--- a/Starlight.vcxproj
+++ b/Starlight.vcxproj
@@ -266,6 +266,7 @@
     <ClCompile Include="src\lib\Assert.cpp" />
     <ClCompile Include="src\lib\DateTime.cpp" />
     <ClCompile Include="src\lib\di\InstanceCollection.cpp" />
+    <ClCompile Include="src\lib\di\InstanceHolder.cpp" />
     <ClCompile Include="src\lib\Environment.cpp" />
     <ClCompile Include="src\lib\File.cpp" />
     <ClCompile Include="src\lib\NumericConverter.cpp" />
