resolving factories for render classes. RenderInjectModule.

--- a/Starlight.vcxproj.filters
+++ b/Starlight.vcxproj.filters
@@ -188,6 +188,7 @@
     <ClInclude Include="src\game\GameFactory.h" />
     <ClInclude Include="src\game\GameInjectModule.h" />
     <ClInclude Include="src\lib\di\DefaultInstanceHolder.h" />
+    <ClInclude Include="src\game\RenderInjectModule.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\lib\Math.cpp" />
@@ -353,6 +354,7 @@
     <ClCompile Include="src\input\InputDevices.cpp" />
     <ClCompile Include="src\game\GameInjectModule.cpp" />
     <ClCompile Include="src\lib\di\InstanceHolder.cpp" />
+    <ClCompile Include="src\game\RenderInjectModule.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="res\Starlight.rc" />
