--- a/Starlight.vcxproj
+++ b/Starlight.vcxproj
@@ -48,6 +48,7 @@
     <ClInclude Include="src\game\CoreInjectModule.h" />
     <ClInclude Include="src\game\GameFactory.h" />
     <ClInclude Include="src\game\GameInjectModule.h" />
+    <ClInclude Include="src\game\RenderInjectModule.h" />
     <ClInclude Include="src\game\ScreenNavigator.h" />
     <ClInclude Include="src\gl\AnimatedTexturedRect.h" />
     <ClInclude Include="src\gl\Face.h" />
@@ -247,6 +248,7 @@
     <ClCompile Include="src\core\TrackManager.cpp" />
     <ClCompile Include="src\game\GameFactory.cpp" />
     <ClCompile Include="src\game\GameInjectModule.cpp" />
+    <ClCompile Include="src\game\RenderInjectModule.cpp" />
     <ClCompile Include="src\game\ScreenNavigator.cpp" />
     <ClCompile Include="src\gl\AnimatedTexturedRect.cpp" />
     <ClCompile Include="src\gl\Face.cpp" />
