--- a/Starlight.vcxproj
+++ b/Starlight.vcxproj
@@ -48,7 +48,6 @@
     <ClInclude Include="src\game\CoreInjectModule.h" />
     <ClInclude Include="src\game\GameFactory.h" />
     <ClInclude Include="src\game\GameInjectModule.h" />
-    <ClInclude Include="src\game\GLInjectModule.h" />
     <ClInclude Include="src\game\RenderInjectModule.h" />
     <ClInclude Include="src\game\ScreenNavigator.h" />
     <ClInclude Include="src\gl\AnimatedTexturedRect.h" />
@@ -120,7 +119,7 @@
     <ClInclude Include="src\render\common\StarsRenderer.h" />
     <ClInclude Include="src\render\effect\FadeEffect.h" />
     <ClInclude Include="src\render\ui\FinishRenderer.h" />
-    <ClInclude Include="src\render\ui\GraphicItemCollection.h" />
+    <ClInclude Include="src\render\common\GraphicItemCollection.h" />
     <ClInclude Include="src\render\ui\PauseMenuRenderer.h" />
     <ClInclude Include="src\render\ui\RacePreparationRenderer.h" />
     <ClInclude Include="src\render\common\RenderConstants.h" />
@@ -249,7 +248,6 @@
     <ClCompile Include="src\core\TrackManager.cpp" />
     <ClCompile Include="src\game\GameFactory.cpp" />
     <ClCompile Include="src\game\GameInjectModule.cpp" />
-    <ClCompile Include="src\game\GLInjectModule.cpp" />
     <ClCompile Include="src\game\RenderInjectModule.cpp" />
     <ClCompile Include="src\game\ScreenNavigator.cpp" />
     <ClCompile Include="src\gl\AnimatedTexturedRect.cpp" />
@@ -319,7 +317,7 @@
     <ClCompile Include="src\render\common\BackgroundRenderer.cpp" />
     <ClCompile Include="src\render\effect\FadeEffect.cpp" />
     <ClCompile Include="src\render\ui\FinishRenderer.cpp" />
-    <ClCompile Include="src\render\ui\GraphicItemCollection.cpp" />
+    <ClCompile Include="src\render\common\GraphicItemCollection.cpp" />
     <ClCompile Include="src\render\ui\RacePreparationRenderer.cpp" />
     <ClCompile Include="src\render\ui\RaceRenderer.cpp" />
     <ClCompile Include="src\render\common\ShipsRenderer.cpp" />
