--- a/Starlight.vcxproj
+++ b/Starlight.vcxproj
@@ -44,14 +44,14 @@
     <ClInclude Include="src\core\StartingGridInitializer.h" />
     <ClInclude Include="src\core\TrackManager.h" />
     <ClInclude Include="src\core\WeaponLogic.h" />
-    <ClInclude Include="src\game\AIInjectModule.h" />
-    <ClInclude Include="src\game\CoreInjectModule.h" />
+    <ClInclude Include="src\game\inject\AIInjectModule.h" />
+    <ClInclude Include="src\game\inject\CoreInjectModule.h" />
     <ClInclude Include="src\game\GameFactory.h" />
-    <ClInclude Include="src\game\GameInjectModule.h" />
-    <ClInclude Include="src\game\RenderInjectModule.h" />
+    <ClInclude Include="src\game\inject\GameInjectModule.h" />
+    <ClInclude Include="src\game\inject\RenderInjectModule.h" />
     <ClInclude Include="src\game\ScreenNavigator.h" />
-    <ClInclude Include="src\game\UIInjectModule.h" />
-    <ClInclude Include="src\game\VoxInjectModule.h" />
+    <ClInclude Include="src\game\inject\UIInjectModule.h" />
+    <ClInclude Include="src\game\inject\VoxInjectModule.h" />
     <ClInclude Include="src\gl\AnimatedTexturedRect.h" />
     <ClInclude Include="src\gl\Face.h" />
     <ClInclude Include="src\gl\FramedTexture.h" />
@@ -241,19 +241,19 @@
     <ClCompile Include="src\core\ShipStateLogic.cpp" />
     <ClCompile Include="src\core\StartingGridInitializer.cpp" />
     <ClCompile Include="src\core\WeaponLogic.cpp" />
-    <ClCompile Include="src\game\AIInjectModule.cpp" />
-    <ClCompile Include="src\game\CoreInjectModule.cpp" />
+    <ClCompile Include="src\game\inject\AIInjectModule.cpp" />
+    <ClCompile Include="src\game\inject\CoreInjectModule.cpp" />
     <ClCompile Include="src\game\Game.cpp" />
     <ClCompile Include="src\core\Camera.cpp" />
     <ClCompile Include="src\core\LapChecker.cpp" />
     <ClCompile Include="src\core\cm\TrackCollisionDetector.cpp" />
     <ClCompile Include="src\core\TrackManager.cpp" />
     <ClCompile Include="src\game\GameFactory.cpp" />
-    <ClCompile Include="src\game\GameInjectModule.cpp" />
-    <ClCompile Include="src\game\RenderInjectModule.cpp" />
+    <ClCompile Include="src\game\inject\GameInjectModule.cpp" />
+    <ClCompile Include="src\game\inject\RenderInjectModule.cpp" />
     <ClCompile Include="src\game\ScreenNavigator.cpp" />
-    <ClCompile Include="src\game\UIInjectModule.cpp" />
-    <ClCompile Include="src\game\VoxInjectModule.cpp" />
+    <ClCompile Include="src\game\inject\UIInjectModule.cpp" />
+    <ClCompile Include="src\game\inject\VoxInjectModule.cpp" />
     <ClCompile Include="src\gl\AnimatedTexturedRect.cpp" />
     <ClCompile Include="src\gl\Face.cpp" />
     <ClCompile Include="src\gl\FramedTexture.cpp" />
