--- a/Starlight.vcxproj
+++ b/Starlight.vcxproj
@@ -71,6 +71,7 @@
     <ClInclude Include="src\lib\DateTime.h" />
     <ClInclude Include="src\lib\Dictionary.h" />
     <ClInclude Include="src\lib\di\Binder.h" />
+    <ClInclude Include="src\lib\di\FunctionInstanceHolder.h" />
     <ClInclude Include="src\lib\di\ResolvingFactoryInstanceHolder.h" />
     <ClInclude Include="src\lib\di\DependencyContainer.h" />
     <ClInclude Include="src\lib\di\InjectModule.h" />
