--- a/Starlight.vcxproj
+++ b/Starlight.vcxproj
@@ -97,6 +97,7 @@
     <ClInclude Include="src\model\PowerUp.h" />
     <ClInclude Include="src\model\ShipAIData.h" />
     <ClInclude Include="src\model\ShipControls.h" />
+    <ClInclude Include="src\model\TrackEdge.h" />
     <ClInclude Include="src\model\TrackPointInfo.h" />
     <ClInclude Include="src\model\Weapon.h" />
     <ClInclude Include="src\render\common\BackgroundSphere.h" />
