--- a/Starlight.vcxproj
+++ b/Starlight.vcxproj
@@ -45,6 +45,7 @@
     <ClInclude Include="src\core\StartingGridInitializer.h" />
     <ClInclude Include="src\core\TrackManager.h" />
     <ClInclude Include="src\core\WeaponLogic.h" />
+    <ClInclude Include="src\game\GameInitializer.h" />
     <ClInclude Include="src\game\inject\AIInjectModule.h" />
     <ClInclude Include="src\game\inject\CoreInjectModule.h" />
     <ClInclude Include="src\game\GameFactory.h" />
@@ -246,6 +247,7 @@
     <ClCompile Include="src\core\ShipStateLogic.cpp" />
     <ClCompile Include="src\core\StartingGridInitializer.cpp" />
     <ClCompile Include="src\core\WeaponLogic.cpp" />
+    <ClCompile Include="src\game\GameInitializer.cpp" />
     <ClCompile Include="src\game\inject\AIInjectModule.cpp" />
     <ClCompile Include="src\game\inject\CoreInjectModule.cpp" />
     <ClCompile Include="src\game\Game.cpp" />
