--- a/Starlight.vcxproj
+++ b/Starlight.vcxproj
@@ -27,6 +27,7 @@
     <ClInclude Include="src\anx\AudioResources.h" />
     <ClInclude Include="src\anx\RandomSpherePoints.h" />
     <ClInclude Include="src\audio\ALFormat.h" />
+    <ClInclude Include="src\audio\AudioData.h" />
     <ClInclude Include="src\audio\AudioSample.h" />
     <ClInclude Include="src\audio\WavFile.h" />
     <ClInclude Include="src\core\cm\BulletCollisionDetector.h" />
@@ -153,7 +154,7 @@
     <ClInclude Include="src\vox\RaceVox.h" />
     <ClInclude Include="src\vox\MenuItemVox.h" />
     <ClInclude Include="src\vox\PauseMenuVox.h" />
-    <ClInclude Include="src\vox\SampleCollection.h" />
+    <ClInclude Include="src\vox\AudioDataCollection.h" />
     <ClInclude Include="src\vox\ScreenVox.h" />
     <ClInclude Include="src\vox\ScreenVoxCollection.h" />
     <ClInclude Include="src\vox\StartMenuVox.h" />
@@ -224,6 +225,7 @@
     <ClCompile Include="src\anx\RandomSpherePoints.cpp" />
     <ClCompile Include="src\anx\TrackBuilder.cpp" />
     <ClCompile Include="src\audio\ALFormat.cpp" />
+    <ClCompile Include="src\audio\AudioData.cpp" />
     <ClCompile Include="src\audio\AudioSample.cpp" />
     <ClCompile Include="src\audio\WavFile.cpp" />
     <ClCompile Include="src\calc\LineIntersector.cpp" />
@@ -358,7 +360,7 @@
     <ClCompile Include="src\vox\RacePreparationVox.cpp" />
     <ClCompile Include="src\vox\RaceVox.cpp" />
     <ClCompile Include="src\vox\PauseMenuVox.cpp" />
-    <ClCompile Include="src\vox\SampleCollection.cpp" />
+    <ClCompile Include="src\vox\AudioDataCollection.cpp" />
     <ClCompile Include="src\vox\ScreenVox.cpp" />
     <ClCompile Include="src\vox\ScreenVoxCollection.cpp" />
     <ClCompile Include="src\vox\StartMenuVox.cpp" />
