rename ScreenRendererCollection, ScreenVoxCollection. refactoring.

--- a/Starlight.vcxproj
+++ b/Starlight.vcxproj
@@ -132,7 +132,7 @@
     <ClInclude Include="src\render\ui\PauseMenuRenderer.h" />
     <ClInclude Include="src\render\ui\RacePreparationRenderer.h" />
     <ClInclude Include="src\render\common\RenderConstants.h" />
-    <ClInclude Include="src\render\ui\ScreenRendererCollection.h" />
+    <ClInclude Include="src\render\ui\RenderManager.h" />
     <ClInclude Include="src\render\ui\SelectedItemColor.h" />
     <ClInclude Include="src\render\ui\StartMenuRenderer.h" />
     <ClInclude Include="src\render\ui\TrackSelectorRenderer.h" />
@@ -156,7 +156,7 @@
     <ClInclude Include="src\vox\PauseMenuVox.h" />
     <ClInclude Include="src\vox\AudioDataCollection.h" />
     <ClInclude Include="src\vox\ScreenVox.h" />
-    <ClInclude Include="src\vox\ScreenVoxCollection.h" />
+    <ClInclude Include="src\vox\VoxManager.h" />
     <ClInclude Include="src\vox\StartMenuVox.h" />
     <ClInclude Include="src\vox\TrackSelectorVox.h" />
     <ClInclude Include="src\win\resource.h" />
@@ -343,7 +343,7 @@
     <ClCompile Include="src\render\debug\DebugShipRenderer.cpp" />
     <ClCompile Include="src\render\debug\DebugTrackRenderer.cpp" />
     <ClCompile Include="src\render\debug\DebugRenderLogic.cpp" />
-    <ClCompile Include="src\render\ui\ScreenRendererCollection.cpp" />
+    <ClCompile Include="src\render\ui\RenderManager.cpp" />
     <ClCompile Include="src\render\ui\SelectedItemColor.cpp" />
     <ClCompile Include="src\render\ui\StartMenuRenderer.cpp" />
     <ClCompile Include="src\render\ui\TrackSelectorRenderer.cpp" />
@@ -361,7 +361,7 @@
     <ClCompile Include="src\vox\PauseMenuVox.cpp" />
     <ClCompile Include="src\vox\AudioDataCollection.cpp" />
     <ClCompile Include="src\vox\ScreenVox.cpp" />
-    <ClCompile Include="src\vox\ScreenVoxCollection.cpp" />
+    <ClCompile Include="src\vox\VoxManager.cpp" />
     <ClCompile Include="src\vox\StartMenuVox.cpp" />
     <ClCompile Include="src\vox\TrackSelectorVox.cpp" />
     <ClCompile Include="src\win\main.cpp" />
