--- a/Starlight.vcxproj.filters
+++ b/Starlight.vcxproj.filters
@@ -86,14 +86,14 @@
     <ClInclude Include="src\render\ui\StartMenuRenderer.h" />
     <ClInclude Include="src\render\ui\TrackSelectorRenderer.h" />
     <ClInclude Include="src\render\ui\PauseMenuRenderer.h" />
-    <ClInclude Include="src\render\ui\ScreenRendererCollection.h" />
+    <ClInclude Include="src\render\ui\RenderManager.h" />
     <ClInclude Include="src\lib\CycledArrayIterator.h" />
     <ClInclude Include="src\gl\TexturedRect.h" />
     <ClInclude Include="src\ui\LinearMenuItemSelector.h" />
     <ClInclude Include="src\calc\SinPeriodValue.h" />
     <ClInclude Include="src\render\common\MenuBackgroundRenderer.h" />
     <ClInclude Include="src\vox\ScreenVox.h" />
-    <ClInclude Include="src\vox\ScreenVoxCollection.h" />
+    <ClInclude Include="src\vox\VoxManager.h" />
     <ClInclude Include="src\vox\StartMenuVox.h" />
     <ClInclude Include="src\vox\PauseMenuVox.h" />
     <ClInclude Include="src\vox\RaceVox.h" />
@@ -274,11 +274,11 @@
     <ClCompile Include="src\render\ui\StartMenuRenderer.cpp" />
     <ClCompile Include="src\render\ui\TrackSelectorRenderer.cpp" />
     <ClCompile Include="src\render\ui\PauseMenuRenderer.cpp" />
-    <ClCompile Include="src\render\ui\ScreenRendererCollection.cpp" />
+    <ClCompile Include="src\render\ui\RenderManager.cpp" />
     <ClCompile Include="src\gl\TexturedRect.cpp" />
     <ClCompile Include="src\calc\SinPeriodValue.cpp" />
     <ClCompile Include="src\render\common\MenuBackgroundRenderer.cpp" />
-    <ClCompile Include="src\vox\ScreenVoxCollection.cpp" />
+    <ClCompile Include="src\vox\VoxManager.cpp" />
     <ClCompile Include="src\vox\StartMenuVox.cpp" />
     <ClCompile Include="src\vox\TrackSelectorVox.cpp" />
     <ClCompile Include="src\vox\PauseMenuVox.cpp" />
