vox ui, common folders

--- a/Starlight.vcxproj
+++ b/Starlight.vcxproj
@@ -149,16 +149,16 @@
     <ClInclude Include="src\ui\ScreenManager.h" />
     <ClInclude Include="src\ui\StartMenuScreen.h" />
     <ClInclude Include="src\ui\TrackSelectorScreen.h" />
-    <ClInclude Include="src\vox\FinishVox.h" />
-    <ClInclude Include="src\vox\RacePreparationVox.h" />
-    <ClInclude Include="src\vox\RaceVox.h" />
-    <ClInclude Include="src\vox\MenuItemVox.h" />
-    <ClInclude Include="src\vox\PauseMenuVox.h" />
-    <ClInclude Include="src\vox\AudioDataCollection.h" />
-    <ClInclude Include="src\vox\ScreenVox.h" />
-    <ClInclude Include="src\vox\VoxManager.h" />
-    <ClInclude Include="src\vox\StartMenuVox.h" />
-    <ClInclude Include="src\vox\TrackSelectorVox.h" />
+    <ClInclude Include="src\vox\ui\FinishVox.h" />
+    <ClInclude Include="src\vox\ui\RacePreparationVox.h" />
+    <ClInclude Include="src\vox\ui\RaceVox.h" />
+    <ClInclude Include="src\vox\ui\MenuItemVox.h" />
+    <ClInclude Include="src\vox\ui\PauseMenuVox.h" />
+    <ClInclude Include="src\vox\common\AudioDataCollection.h" />
+    <ClInclude Include="src\vox\ui\ScreenVox.h" />
+    <ClInclude Include="src\vox\ui\VoxManager.h" />
+    <ClInclude Include="src\vox\ui\StartMenuVox.h" />
+    <ClInclude Include="src\vox\ui\TrackSelectorVox.h" />
     <ClInclude Include="src\win\resource.h" />
     <ClInclude Include="src\anx\TrackBuilder.h" />
     <ClInclude Include="src\calc\Plane.h" />
@@ -355,15 +355,15 @@
     <ClCompile Include="src\ui\ScreenManager.cpp" />
     <ClCompile Include="src\ui\StartMenuScreen.cpp" />
     <ClCompile Include="src\ui\TrackSelectorScreen.cpp" />
-    <ClCompile Include="src\vox\FinishVox.cpp" />
-    <ClCompile Include="src\vox\RacePreparationVox.cpp" />
-    <ClCompile Include="src\vox\RaceVox.cpp" />
-    <ClCompile Include="src\vox\PauseMenuVox.cpp" />
-    <ClCompile Include="src\vox\AudioDataCollection.cpp" />
-    <ClCompile Include="src\vox\ScreenVox.cpp" />
-    <ClCompile Include="src\vox\VoxManager.cpp" />
-    <ClCompile Include="src\vox\StartMenuVox.cpp" />
-    <ClCompile Include="src\vox\TrackSelectorVox.cpp" />
+    <ClCompile Include="src\vox\ui\FinishVox.cpp" />
+    <ClCompile Include="src\vox\ui\RacePreparationVox.cpp" />
+    <ClCompile Include="src\vox\ui\RaceVox.cpp" />
+    <ClCompile Include="src\vox\ui\PauseMenuVox.cpp" />
+    <ClCompile Include="src\vox\common\AudioDataCollection.cpp" />
+    <ClCompile Include="src\vox\ui\ScreenVox.cpp" />
+    <ClCompile Include="src\vox\ui\VoxManager.cpp" />
+    <ClCompile Include="src\vox\ui\StartMenuVox.cpp" />
+    <ClCompile Include="src\vox\ui\TrackSelectorVox.cpp" />
     <ClCompile Include="src\win\main.cpp" />
     <ClInclude Include="src\core\Constants.h" />
     <ClCompile Include="src\core\RaceInitializer.cpp" />
