--- a/Starlight.vcxproj.filters
+++ b/Starlight.vcxproj.filters
@@ -196,6 +196,7 @@
     <ClInclude Include="src\game\GameInitializer.h" />
     <ClInclude Include="src\gl\ShaderProgram.h" />
     <ClInclude Include="src\vox\common\AudioDataCollection.h" />
+    <ClInclude Include="src\vox\common\ShipVox.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\lib\Math.cpp" />
@@ -367,6 +368,7 @@
     <ClCompile Include="src\game\GameInitializer.cpp" />
     <ClCompile Include="src\vox\common\AudioDataCollection.cpp" />
     <ClCompile Include="src\gl\ShaderProgram.cpp" />
+    <ClCompile Include="src\vox\common\ShipVox.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="res\Starlight.rc" />
