--- a/Starlight.vcxproj.filters
+++ b/Starlight.vcxproj.filters
@@ -36,7 +36,7 @@
     <ClInclude Include="src\calc\LineIntersector.h" />
     <ClInclude Include="src\core\cm\TrackCollisionProcessor.h" />
     <ClInclude Include="src\core\cm\TrackCollisionDetector.h" />
-    <ClInclude Include="src\render\common\ShipMesh.h" />
+    <ClInclude Include="src\render\common\ShipMeshRenderer.h" />
     <ClInclude Include="src\anx\TrackBuilder.h" />
     <ClInclude Include="src\model\track\RoadTrack1.h" />
     <ClInclude Include="src\model\ShipMeasure.h" />
@@ -229,7 +229,7 @@
     <ClCompile Include="src\calc\LineIntersector.cpp" />
     <ClCompile Include="src\core\cm\TrackCollisionProcessor.cpp" />
     <ClCompile Include="src\core\cm\TrackCollisionDetector.cpp" />
-    <ClCompile Include="src\render\common\ShipMesh.cpp" />
+    <ClCompile Include="src\render\common\ShipMeshRenderer.cpp" />
     <ClCompile Include="src\gl\opengl.cpp" />
     <ClCompile Include="src\anx\TrackBuilder.cpp" />
     <ClCompile Include="src\model\track\RoadTrack1.cpp" />
