--- a/Starlight.vcxproj
+++ b/Starlight.vcxproj
@@ -87,6 +87,7 @@
     <ClInclude Include="src\lib\Environment.h" />
     <ClInclude Include="src\lib\File.h" />
     <ClInclude Include="src\lib\IArray.h" />
+    <ClInclude Include="src\lib\Matrix.h" />
     <ClInclude Include="src\lib\NumericConverter.h" />
     <ClInclude Include="src\lib\Path.h" />
     <ClInclude Include="src\lib\Point2.h" />
