--- a/Starlight.vcxproj.filters
+++ b/Starlight.vcxproj.filters
@@ -33,7 +33,7 @@
     <ClInclude Include="src\calc\LineIntersector.h" />
     <ClInclude Include="src\core\cm\TrackCollisionProcessor.h" />
     <ClInclude Include="src\core\cm\TrackCollisionDetector.h" />
-    <ClInclude Include="src\render\common\ShipMeshRenderer.h" />
+    <ClInclude Include="src\render\common\ShipMesh.h" />
     <ClInclude Include="src\anx\TrackBuilder.h" />
     <ClInclude Include="src\model\track\RoadTrack1.h" />
     <ClInclude Include="src\model\ShipMeasure.h" />
@@ -194,6 +194,7 @@
     <ClInclude Include="src\vox\common\AudioDataCollection.h" />
     <ClInclude Include="src\vox\common\ShipVox.h" />
     <ClInclude Include="src\lib\Matrix.h" />
+    <ClInclude Include="src\render\shader\ShaderPrograms.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\lib\Math.cpp" />
@@ -223,7 +224,7 @@
     <ClCompile Include="src\calc\LineIntersector.cpp" />
     <ClCompile Include="src\core\cm\TrackCollisionProcessor.cpp" />
     <ClCompile Include="src\core\cm\TrackCollisionDetector.cpp" />
-    <ClCompile Include="src\render\common\ShipMeshRenderer.cpp" />
+    <ClCompile Include="src\render\common\ShipMesh.cpp" />
     <ClCompile Include="src\gl\opengl.cpp" />
     <ClCompile Include="src\anx\TrackBuilder.cpp" />
     <ClCompile Include="src\model\track\RoadTrack1.cpp" />
@@ -362,6 +363,7 @@
     <ClCompile Include="src\vox\common\AudioDataCollection.cpp" />
     <ClCompile Include="src\gl\ShaderProgram.cpp" />
     <ClCompile Include="src\vox\common\ShipVox.cpp" />
+    <ClCompile Include="src\render\shader\ShaderPrograms.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="res\Starlight.rc" />
