TrackMesh, TrackRenderer update

--- a/Starlight.vcxproj
+++ b/Starlight.vcxproj
@@ -128,6 +128,7 @@
     <ClInclude Include="src\render\dash\PlayerShipHealthRenderer.h" />
     <ClInclude Include="src\render\common\StarsRenderer.h" />
     <ClInclude Include="src\render\effect\FadeEffect.h" />
+    <ClInclude Include="src\render\mesh\TrackMesh.h" />
     <ClInclude Include="src\render\shader\ShaderPrograms.h" />
     <ClInclude Include="src\render\ui\FinishRenderer.h" />
     <ClInclude Include="src\render\common\GraphicItemCollection.h" />
@@ -330,6 +331,7 @@
     <ClCompile Include="src\render\dash\PlayerShipHealthRenderer.cpp" />
     <ClCompile Include="src\render\common\BackgroundRenderer.cpp" />
     <ClCompile Include="src\render\effect\FadeEffect.cpp" />
+    <ClCompile Include="src\render\mesh\TrackMesh.cpp" />
     <ClCompile Include="src\render\shader\ShaderPrograms.cpp" />
     <ClCompile Include="src\render\ui\FinishRenderer.cpp" />
     <ClCompile Include="src\render\common\GraphicItemCollection.cpp" />
