--- a/Starlight.vcxproj.filters
+++ b/Starlight.vcxproj.filters
@@ -197,6 +197,7 @@
     <ClInclude Include="src\render\shader\ShaderPrograms.h" />
     <ClInclude Include="src\calc\ModelMatrix.h" />
     <ClInclude Include="src\render\mesh\TrackMesh.h" />
+    <ClInclude Include="src\lib\ArrayIndexGenerator.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\lib\Math.cpp" />
@@ -368,6 +369,7 @@
     <ClCompile Include="src\render\shader\ShaderPrograms.cpp" />
     <ClCompile Include="src\calc\ModelMatrix.cpp" />
     <ClCompile Include="src\render\mesh\TrackMesh.cpp" />
+    <ClCompile Include="src\lib\ArrayIndexGenerator.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="res\Starlight.rc" />
